--- a/interaccio.html
+++ b/interaccio.html
@@ -34,9 +34,9 @@
 
       <!-- Continguts -->
       <div class="tab-content">
-        <div class="content-1">Contingut de la Pestanya 1</div>
-        <div class="content-2">Contingut de la Pestanya 2</div>
-        <div class="content-3">Contingut de la Pestanya 3</div>
+        <div class="content-1">Inazuma Eleven</div>
+        <div class="content-2">Attak on titan</div>
+        <div class="content-3">Kimetsu no Yaiba</div>
       </div>
     </section>
 
