segona modificacio interaccio

--- a/interaccio.html
+++ b/interaccio.html
@@ -7,13 +7,13 @@
       <title>Interacció</title>
    <body id="pagina-interaccio">
   <header>
-    <h1>Interactivitat CSS Sense JavaScript</h1>
+    <h1>Interaccio</h1>
     <!-- Botó alternador per mòbil -->
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
     <nav class="menu">
       <a href="index.html">Formulari</a>
-      <a href="interaccio.html">Interactivitat</a>
+      <a href="interaccio.html">Interaccio</a>
     </nav>
   </header>
 
