interaccio modificat por tecera vez

--- a/interaccio.html
+++ b/interaccio.html
@@ -3,7 +3,6 @@
    <head>
     <link rel="stylesheet" href="estils.css">
        <meta charset="UTF-8">
-       <title>Principal</title>
       <title>Interacció</title>
    <body id="pagina-interaccio">
   <header>
@@ -57,7 +56,7 @@
   </main>
 
   <footer>
-    <p>Interacció amb CSS sense JavaScript | Flexbox i responsive</p>
+    <p>Interacció</p>
   </footer>
 </body>
 </html>
