--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
    <head>
     <link rel="stylesheet" href="estils.css">
        <meta charset="UTF-8">
-       <title>Principal</title>
        <title>Formulari</title>
    <body>
   <header>
@@ -117,7 +116,7 @@
   </main>
 
   <footer>
-    <p>Formulari amb Flexbox i CSS sense JavaScript</p>
+    <p>Formulari</p>
   </footer>
 </body>
 </html>
